--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -38,14 +38,14 @@
 
 				<div class="blue-sidebar">
 					<div class="top">
-						<div class="col-md-5">
+						<div class="col-md-5 l">
 						<p>Noel B. Leonard has years of experience representing clients with a wide range of litigation concerns and legal issues.
 						He understands the intricacies of Alabama law in a way that helps his clients recover rightful damages.</p>
 						</div>
-						<div class="col-md-5">
+						<div class="col-md-5 r">
 						<p>Noel's firm will help you determine your legal options, help file your claim, and make every effort to see that you receive proper compensation for your injuries, and all other damages sustained during the accident.</p>
 						</div>
-						<%=image_tag('scales1.png', class: 'img-responsive icon') %>
+						<%=image_tag('scales.png', class: 'img-responsive icon') %>
 					</div>
 					<div class="bottom"><div class="overlay">
 						<h4>What We Can Do For You?</h4>
