--- a/app/views/static_pages/auto-accidents.html.erb
+++ b/app/views/static_pages/auto-accidents.html.erb
@@ -1,75 +1,90 @@
 <% @page_title = "Auto Accidents" %>
 <% @page_description = "New Subject" %>
 
-<div class="cst-header filter">
-	<div class="overlay">
-		<div class="title-box">
-			<h4>Noel B. Leonard represents</h4>
-			<h1>Automotive Accident Claims</h1>
-		</div>
+<div class="auto-s2">
+	<div class="container">
+		<h1>Automotive Accident Claims</h1>
+		<h3>Attorney Leonard helps accident victims get the results they need to heal and move forward.</h3>
 	</div>
 </div>
-
-<!--   Bicycle and Pedestrian Injury Claims
-  Distracted Driving Accident Claims
-  DUI Accident Victims &amp; Injury Claims
-  Hit &amp; Run Accident Victims
-  Motorcyle Accident Injury Claims
-  Whiplash Injury Claims
- -->
-
 
 <div class="main-body">
-	<div class="topic-boxes">
-		<div class="intro">
-			<h3>Noel B. Leonard will fight for you.</h3>
-			<p>Attorney Leonard helps accident victims get the results they need to heal and move forward.</p>
-		</div>
+	<div class="container">
+		<table class="boxes">
+			<tbody>
+				<tr>
+					<td>
+						<p>Despite countless safety improvements from the auto industry over the years, thousands of people are still injured or killed annually in car accidents.
+						If you suffer from an injury caused by an auto accident, you may be entitled to compensation.</p>
+					</td>
 
-		<div class="b1">
-			<p>Despite the countless advancements and safety improvements from the auto industry over the years, thousands of Alabama residents are still injured or killed annually in car accidents. If you suffer from an injury as the result of an auto accident in Alabama, you need an experienced and trustworthy lawyer to fight on your behalf.
-			Noel B. Leonard will fight to ensure you receive the compensation you deserve.
-			</p>
-		</div>
+					<td>
+						<p>Unfortunately, collecting damages for these injuries can be a lengthy and expensive process. That is why it is essential to seek legal representation from an experienced lawyer who you can trust to fight on your behalf.</p>
+					</td>
 
-		<div class="b2">
-			<p>Dealing with an auto accident is stressful enough on its own. When you have to factor in compensation for an injury, there are practical considerations to think of as well. Collecting damages from an auto accident injury can be an expensive, and often lengthy process. This is why it is essential to seek legal representation from an expert attorney who will fight to recover your compensation.</p>
-		</div>
+					<td>
+						<p>If you are the victim of an injury as the result of a serious auto accident in Alabama, and a resident of Baldwin, Mobile, or Escambia County, Noel B. Leonard will fight to ensure you receive the compensation you deserve.</p>
+					</td>
 
-		<div class="b3">
-			<p>Noel B. Leonard has successfully represented injured drivers, passengers, and accident victims in Alabama for years, helping provide the crucial compensation they needed to pay for accident-related expenses, such as lost wages and medical bills. Noel has also taken on insurance companies, in order to protect clients from the company's attempts to deny rightful accident compensation.</p>
-		</div>
+				</tr>
+
+				<tr>
+					<td>
+						<p>Noel B. Leonard has successfully represented injured Alabama drivers, passengers, and accident victims for years, providing the crucial compensation needed to pay for accident-related expenses such as lost wages and medical bills.</p>
+					</td>
+
+					<td>
+						<p>Noel has also taken on insurance companies, successfully protecting clients from insurance companies attempting to deny rightful accident compensation. </p>
+					</td>
+
+					<td>
+						<p>Accidents can happen anywhere, but finding the right attorney does not happen by accident. Contact Noel B. Leonard today for a legal consultation, so you can learn your rights, and start to heal.</p>
+					</td>
+				</tr>
+			</tbody>
+		</table>
 	</div>
+</div>
 
-	<div class="main-content">
-		<div class="s1">
-			<div class="col-md-7 left">
-				<h4><span>Accidents can happen anywhere, but finding the right attorney does not happen by accident.</span></h4>
-				<h3><span>Noel B. Leonard has helped thousands of accident victims in Alabama</span> to get the compensation and/or settlement that they deserve.</h3>
-			</div>
-
-			<div class="col-md-5 right">
-				<p><b>Noel B. Leonard has successfully represented clients in a wide range of auto accident claims, including:</b></p>
-				<ul>
-					<li>Distracted Driving Claims</li>
-					<li>Drunk Driving Claims</li>
-					<li>Hit and Run Accident Claims</li>
-					<li>Whiplash Injury Claims</li>
-					<li>18-Wheeler Accidents</li>
-					<li>And So Many More</li>
-				</ul>
-			</div>
+<div class="main-body-2">
+		<div class="over">
+			<h2>Noel B. Leonard will <span>fight for you.</span></h2>
 		</div>
+
+		<div class="content">
+			<p>Attorney Leonard has successfully represented clients in a wide range of auto accident claims, including:</p>
+			<ul>
+				<li><i class="fa fa-check-square-o"></i> Distracted Driving Claims</li>
+				<li><i class="fa fa-check-square-o"></i> Drunk Driving Claims</li>
+				<li><i class="fa fa-check-square-o"></i> Hit and Run Accident Claims</li>
+				<li><i class="fa fa-check-square-o"></i> Whiplash Injury Claims</li>
+				<li><i class="fa fa-check-square-o"></i> 18-Wheeler Accidents</li>
+				<li><b>And So Many More</b></li>
+			</ul>
+		</div>
+</div>
+
+<div class="main-body-3">
+	<div class="container">
+			<div class="consult-box">
+				<div class="overlay">
+					<h3><span>If you are an auto accident victim in Baldwin, Mobile or Escambia County, and wish to schedule a consultation:</span></h3>
+					<h3>
+					Fill out our case evaluation form <%=link_to "here", contact_path %>, <br> or
+					call <%= number_to_phone(2519438638, delimiter: '-', class: 'phone') %><br> to set up an appointment.</h3>
+				</div>
+			</div>
+
+			<div class="col-md-6">
+				<%=link_to "18-Wheeler Accidents", trucker_accidents_path, class: 'pre-ft-link first' %>
+				<%=link_to "Motorcycle Accidents", motorcycle_accidents_path, class: 'pre-ft-link' %>
+			</div>
 	</div>
 </div>
 
 
 
-		<!-- <p>
-			If you live in Baldwin, Mobile or Escambia County, Foley accident attorney Noel B. Leonard is ready to help you as well.
-			Contact Noel B. Leonard for a legal consultation to start the process of healing from your Alabama auto accident.
-			Call (251) 943-8638 for a consultation or fill in our Case Evaluation Form and we will contact you as soon as possible.
-		</p> -->
+
 
 
 
