--- a/app/assets/stylesheets/_mixins.scss
+++ b/app/assets/stylesheets/_mixins.scss
@@ -67,7 +67,7 @@
 // Breakpoints
 @mixin bp($point) {
     @if $point == tb {
-        @media screen and (max-width: 1025px) { @content ; }
+        @media (max-width: 1025px) { @content ; }
     }
 
     @else if $point == md {
@@ -82,12 +82,15 @@
         @media (max-width: 640px)  { @content ; }
     }
 
-    @else if $point == xs {
-        @media (max-width: 320px)  { @content ; }
+    @else if $point == ph {
+        @media (max-width: 570px)  { @content ; }
     }
 
-    @else if $point == iv {
-        @media only screen and (max-width: 568px) and (min-width: 320px) { @content ; }
+    @else if $point == xs {
+        @media (max-width: 420px)  { @content ; }
+    }
+
+    @else if $point == xl {
+        @media (min-width: 1025px) { @content ; }
     }
 }
-
