--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -150,12 +150,28 @@ footer { @include sec-default(); background-color: $dk-blue; border-top: 2px sol
   @include bp(sm) {
     ul.social-links { width: 75%; }
 
+    // .fs2 .block {
+    //   &.one, &.two, &.three, &.four { width: 45%; margin-left:30px;}
+    //   &.one, &.two {margin-bottom: 30px;}
+    //   .ft-title{ margin-top: 10px; margin-bottom: 12px;}
+    //   ul.contact span {width: auto; margin-right: 10px;}
+    // }
+
     .fs2 .block {
-      &.one, &.two, &.three, &.four { width: 45%; margin-left:30px;}
-      &.one, &.two {margin-bottom: 30px;}
+      &.one, &.two, &.three, &.four { width: 75%; @include center-block(); margin-bottom: 40px;}
+      &.four {margin-bottom: 10px;}
       .ft-title{ margin-top: 10px; margin-bottom: 12px;}
       ul.contact span {width: auto; margin-right: 10px;}
     }
+  }
+
+  @include bp(xs) {
+    .fs2 {padding-bottom: 10px;}
+    .fs2 .block {
+      &.one, &.two, &.three, &.four { width: 90%;}
+      &.four {margin-bottom: 0;}
+    }
+    .disclaimer {margin-top:0;}
   }
 
 
